--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
-VITE_API_URL=http://0.0.0.0:5000
+VITE_API_URL=/api
 MONGO_URI=mongodb://mongo:27017/emmart
 JWT_SECRET=your_super_secret_key
 ADMIN_USER=admin
