--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,21 @@
-FROM node:18
+# backend/Dockerfile
+FROM node:18-alpine
 
+# Create app directory
 WORKDIR /app
 
-# Only copy package files first for caching
-COPY package*.json ./
+# Install app dependencies
+COPY package.json ./
 RUN npm install
 
-# Then copy the rest
+# Copy rest of the app
 COPY . .
 
+# Set production environment
+ENV NODE_ENV=production
+
+# Expose API port
 EXPOSE 5000
+
+# Start server
 CMD ["node", "server.js"]
