--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "mongoose": "^7.0.3",
     "dotenv": "^16.3.1",
     "razorpay": "^2.9.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.2"
   }
 }
