--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,14 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "axios": "^1.6.8",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.4.1",
     "vite": "^5.2.0"
   }
 }
-
