working on adding photos from device

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.3.1",
     "razorpay": "^2.9.0",
     "cors": "^2.8.5",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.4"
   }
 }
