--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
-VITE_API_URL=/api
+VITE_API_URL=https://orange-space-capybara-qjrw9qp75x2p6r-5000.app.github.dev/
 MONGO_URI=mongodb://mongo:27017/emmart
 JWT_SECRET=your_super_secret_key
 ADMIN_USER=admin
