--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.4.1",
+    "multer": "^1.4.4",
     "vite": "^5.2.0"
   }
 }
